Updating Gradle and dependencies. Disabling preview features.